[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtf-breakout"
version = "0.1.0"
description = "MTF 5m Breakout/Retest Strategy"
authors = [{name = "", email = ""}]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mtf_breakout*"]
